[package]
name = "txl-rs"
version = "0.0.3"
authors = ["Yijun Yu <yijun.yu@open.ac.uk>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/trusted-programming/txl-rs"
homepage = "https://github.com/trusted-programming/txl-rs"
documentation = "https://docs.rs/txl-rs"
keywords = ["parser", "transformation"]
readme = "README.md"
description = "Wrapper of txl for Rust"

[[bin]]
name = "txl-rs"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking"] }
flate2 = "1.0.24"
tar = "0.4.28"
zip = "0.6.3"
regex = "1.7.0"
